--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "^5.6.0",
+    "csurf": "^1.11.0",
+    "helmet": "^7.1.0",
     "prisma": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
