--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "^5.6.0",
+    "bcrypt": "^5.1.1",
     "csurf": "^1.11.0",
     "helmet": "^7.1.0",
     "passport": "^0.7.0",
