--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="mysql://juogsfvgxvtnz5wxrypm:pscale_pw_V1okeKhlSacbLSinx9KzoRaUZiBpp0mDHUu89lke2oy@aws.connect.psdb.cloud/case?sslaccept=strict"
-SHADOW_DATABASE_URL="mysql://7hrp2p1fz1p5f7b26i5y:pscale_pw_mSLZmgVYyqAb8QdvHjqwF590wMkjxdN5XzeW04rlscm@aws.connect.psdb.cloud/case?sslaccept=strict"
+DATABASE_URL='mysql://vueis6f2wk5wuiw9nhun:pscale_pw_cpE7wpUb4k0bVIzjm8sy4OiTi3AEFWym8vDaTl6Yvv0@aws.connect.psdb.cloud/case?sslaccept=strict'
+
 JWT_SECRET="cac1b7dd-23d9-44a8-be51-ef45533e91e3"
