--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL='mysql://vueis6f2wk5wuiw9nhun:pscale_pw_cpE7wpUb4k0bVIzjm8sy4OiTi3AEFWym8vDaTl6Yvv0@aws.connect.psdb.cloud/case?sslaccept=strict'
+DATABASE_URL='file:.db'
 
 JWT_SECRET="cac1b7dd-23d9-44a8-be51-ef45533e91e3"
